<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/email" />

    <EditText
        android:id="@+id/id_lg"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:hint="@string/emh"
        android:layout_marginTop="134dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        app:layout_constraintTop_toBottomOf="@id/id_lg"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/pw" />

    <EditText
        android:id="@+id/pw_lg"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintTop_toBottomOf="@id/id_lg"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/reg"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>