<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MenuActivity">
    
    <Button
        android:id="@+id/b1_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jaga"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:shadowRadius="0"
        android:textSize="36sp" />

    <Button
        android:id="@+id/b2_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tt"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b1_mm"
        android:shadowRadius="0"
        android:textSize="36sp" />

    <Button
        android:id="@+id/b3_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hh"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b2_mm"
        android:shadowRadius="0"
        android:textSize="36sp" />


    <Button
        android:id="@+id/b4_mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b3_mm"
        android:shadowRadius="0"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b4_mm" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_mm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linear_mm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>